<resources>
    <string name="app_name">Gardeneer</string>
    <string name="menu_hamburger">Menu Hamburger</string>
    <string name="add_plant">Add Plant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="logo">Logo</string>
    <string name="gardneer">GARDENEER</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="watering">Watering</string>
    <string name="weekly_growth_ananlysis">Weekly Growth Analysis</string>
    <string name="plants">Plants</string>
    <string name="back">Back</string>
    <string name="AddToList">Add to List</string>
    <string name="weather_image">Weather Image</string>
    <string name="wishlist">Wishlist</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="side_nav_open">Open</string>
    <string name="side_nav_close">Close</string>
    <string name="nav_header_title">Nav Head Title</string>
    <string name="nav_header_subtitle">Nav Head Subtitle</string>
    <string name="other">Other</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait_while_we_fetch_weather_information">Please wait while we fetch weather information</string>
    <string name="GoodNeighbours">GOOD NEIGHBOURS : </string>
    <string name="BadNeighbours">BAD NEIGHBOURS : </string>
    <string name="PlantingGuide">Planting guide</string>
    <string name="feeding">Feeding</string>
    <string name="Harvest">Harvest</string>
    <string name="PlantingDepth">Planting depth : </string>
    <string name="Water">Water : </string>
    <string name="Text">text</string>
    <string name="Germination">Germination(in days): </string>
    <string name="SproutToHarvest">Sprout to harvest(in days): </string>
    <string name="my_plants">My Plants</string>
    <string name="calendar">Calendar</string>
    <string name="community_posts">Community Posts</string>
    <string name="tips">Tips</string>
    <string name="na">No-Data in local Cache</string>
    <string name="pot_size">Pot Size</string>
    <string name="urea_details">Urea Details</string>
    <string name="fertilizer_details">Fertilizer Details</string>
    <string name="calculate">Calculate</string>
    <string name="number_of_plants">Number of Plants :</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="add_comment_here">Add Comment Here</string>
    <string name="username">Username to use on a post</string>
    <string name="city">New Delhi</string>
    <string-array name="spinner_items">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>