<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FertilizerCalculator"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/backbutton_fertilizeractivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fertilizer Calculator"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="14dp"
            android:layout_gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_plants"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="0"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pot_size"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="22dp"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_items"
            android:prompt="@string/pot_size"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/calculate"/>



    <ScrollView
        android:id="@+id/scrollViewFertilizer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_bg_gray_301_radius_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertilizer_details"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/fertilizerDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:layout_margin = "10dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_bg_gray_301_radius_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urea_details"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/ureaDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</LinearLayout>