<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:padding="5dp">
            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLines="100"
                android:inputType="textPersonName"
                android:hint="@string/title"
                android:scrollHorizontally="false"
                android:background="@drawable/popup_edittext_style"
                />
            <EditText
                android:id="@+id/detailsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:maxLines="2147483647"
                android:inputType="textPersonName"
                android:hint="@string/description"
                android:scrollHorizontally="false"
                android:background="@drawable/popup_edittext_style"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/cancel"/>
                <Button
                    android:id="@+id/postButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/post"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>